# On-OffSketch

./: Botnet_Detection.h  CMakeLists.txt  README.md  benchmark.h  main.cpp
Botnet/: Botnet_Bitmap.h
FPI/: OO_SIMD.h  OO_SIMD_32.h  OO_SIMD_8.h  OPI_BSC.h  OPI_OPT.h  SS.h
PE/: OPE_BSC.h  OPE_OPT.h
common/: Abstract.h
